week 1 & 2 hw fix
